layout11 full-bleed layout with fixed-width

--- a/layout11-full-bleed layout with fixed-width content/style.css
+++ b/layout11-full-bleed layout with fixed-width content/style.css
@@ -58,4 +58,13 @@ img {
 	.splash-content {
 		grid-column: 2/4;
 	}
+
+	.splash-text {
+		columns: 2;
+		column-gap: 2em;
+	}
+
+	.splash-text p {
+		padding-top: 0;
+	}
 }
